<resources>
    <string name="app_name">MusicArtist</string>
    <string name="action_settings">Settings</string>
    <string name="artist_name">Britney Spears</string>
    <string name="artist_birthday">Bday: 3/30/1980</string>
    <string name="artist_email">britney@britneyspears.com</string>
    <string name="artist_phone">310-231-3333</string>
    <string name="artist_site">www.britneyspears.com</string>
    <string name="artist_twitter">https://twitter.com/britneyspears</string>
    <string name="music_title">Music</string>
    <string name="video_title">Videos</string>
    <string name="fan_name">Name</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="content">Content</string>
</resources>
